package com.ranni.connector.http.request;

/**
 * Title: HttpServer
 * Description:
 * TODO 暂无作用
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-21 23:06
 */
public final class HttpRequestImpl extends HttpRequestBase {
}
